Fix avatars being too large in Firefox

--- a/client/css/cchat.css
+++ b/client/css/cchat.css
@@ -106,7 +106,7 @@ input[type=text] {
 }
 
 .avatar img {
-    max-width: 100%;
+    width: 100%;
 }
 .chat-bubble {
     position: relative;
